tests/error/linear_errors/reassign_unused_tuple.err
Error: Drop violation (at $FILE:18:8)
   | 
16 | 
17 | @guppy(module)
18 | def foo(q: qubit @owned) -> tuple[qubit, qubit]:
   |         ^^^^^^^^^^^^^^^ Variable `q` with non-droppable type `qubit` is leaked

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
